<resources>
    <string name="app_name">Converter</string>

    <string name="temperature">Temperature</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Celsius">Celsius</string>
    <string name="tempF2CFormula">Celsius=(Fahrenheit-32)*5/9</string>
    <string name="tempC2FFormula">Fahrenheit=Celsius*9/5+32</string>
    <string name="tempFdegree">°F</string>
    <string name="tempCdegree">°C</string>
    <string name="tempResult">%s is %.1f %s</string>
    <string name="tempInputError">Please enter Temperature</string>
    <string-array name="tempItem_Array">
        <item>Fahrenheit to Celsius</item>
        <item>Celsius to Fahrenheit</item>
    </string-array>

    <string name="Input">Input</string>
    <string name="Output">Output</string>
    <string name="textResult">%s is %.3f %s</string>
    <string name="textResultTooSmall">%s less or equal than 0.001 %s</string>
    <string name="textFormula">%s = %5f %s</string>

    <string name="weight">Weight</string>
    <string name="weightInputError">Please Input Weight</string>
    <string-array name="weightItem_Array">
        <item>Ounce(oz)</item>
        <item>Pound(lb)</item>
        <item>USTon</item>
        <item>MetricTon</item>
        <item>Kg</item>
        <item>g</item>
    </string-array>

    <string name="length">Length</string>
    <string name="lengthInputError">Please Input Length</string>
    <string-array name="lengthItem_Array">
        <item>Inch</item>
        <item>Feet</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>CM</item>
        <item>M</item>
        <item>KM</item>
    </string-array>

    <string name="area">Area</string>
    <string name="sqFeet">Sq Feet</string>
    <string name="Ping">Ping</string>
    <string name="sqMeter">Sq Meter</string>
    <string name="Hectare">Hectare</string>
    <string name="MetricAcre">Metric Acre</string>
    <string name="Acre">Acre</string>

    <string name="volume">Volume</string>
    <string name="teaSpoon">Teaspoon</string>
    <string name="tableSpoon">Tablespoon</string>
    <string name="floz">Fl.Oz</string>
    <string name="cup">Cup</string>
    <string name="pint">Pint</string>
    <string name="quart">Quart</string>
    <string name="gallon">Gallon</string>
    <string name="ml">Milliliter</string>
    <string name="l">Liter</string>

    <string name="perunitcalc">Per Unit Calculator</string>
    <string name="per">----------</string>
    <string name="multiply">X</string>
    <string name="equal">=</string>
    <string name="numerator">Numerator</string>
    <string name="denominator">Denominator</string>
    <string name="result">Result</string>
    <string name="close">Back</string>
</resources>
