<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/tempF2CFormula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ID_tempFormula"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/tempInputError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTempResult"
            app:layout_constraintStart_toEndOf="@+id/tempInputText"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ID_tempFormula" android:layout_marginTop="96dp"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/tempInputText"
            android:hint="@string/tempFdegree"
            tools:layout_editor_absoluteX="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tempInputSpinner"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tempInputSpinner"
            tools:layout_editor_absoluteX="8dp" app:layout_constraintTop_toBottomOf="@+id/ID_tempFormula"
            android:layout_marginTop="32dp"/>
</android.support.constraint.ConstraintLayout>