<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintHorizontal_bias="0.465"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.014"/>
    <TextView
            android:text="@string/teaSpoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/tableSpoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/teaSpoonInputText" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/floz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/teaSpoonInputText"/>
    <TextView
            android:text="@string/cup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tableSpoonInputText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/flozInputText" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/pint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/flozInputText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/quart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/gallonInputText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/gallon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/pintInputText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/cupInputText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/pintInputText" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/mlInputText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/gallonInputText" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/tableSpoonInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:hint="@string/tableSpoon"
            app:layout_constraintStart_toEndOf="@+id/teaSpoonInputText" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/cupInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:hint="@string/cup"
            app:layout_constraintStart_toEndOf="@+id/flozInputText" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/lInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:hint="@string/l"
            app:layout_constraintStart_toEndOf="@+id/gallonInputText" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/quartInputText"
            app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:hint="@string/quart"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/gallonInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:hint="@string/gallon"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/pintInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:hint="@string/pint"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/mlInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:hint="Milliliter"
            app:layout_constraintStart_toEndOf="@+id/pintInputText" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/flozInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:hint="@string/floz"/>
    <EditText
            android:layout_width="135dp"
            android:layout_height="47dp"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/teaSpoonInputText" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:hint="@string/teaSpoon"/>
</android.support.constraint.ConstraintLayout>