<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/length"
            android:layout_width="244dp"
            android:layout_height="52dp"
            android:id="@+id/ID_lengthFormula"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.079"/>
    <TextView
            android:text="@string/Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ID_lengthFormula" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="368dp" android:layout_marginRight="368dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"/>
    <Spinner
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/lengthInputSpinner" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/ID_lengthFormula" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/Output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthInputSpinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="360dp" android:layout_marginRight="360dp"/>
    <Spinner
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/lengthOutputSpinner" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthInputSpinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="9dp" android:layout_marginStart="9dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="7dp" android:layout_marginRight="7dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:ems="10"
            android:id="@+id/lengthInputText" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthOutputSpinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="9dp" android:layout_marginStart="9dp"
            app:layout_constraintEnd_toStartOf="@+id/textLengthResult" android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"/>
    <TextView
            android:layout_width="160dp"
            android:layout_height="41dp"
            android:id="@+id/textLengthResult" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/lengthOutputSpinner" android:text="@string/lengthInputError"
            android:layout_marginLeft="13dp" android:layout_marginStart="13dp"
            app:layout_constraintStart_toEndOf="@+id/lengthInputText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
</android.support.constraint.ConstraintLayout>