<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="@string/sqFeet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView7"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                    <TextView
                            android:text="@string/Ping"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView5"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                </TableRow>
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <EditText
                            android:layout_width="135dp"
                            android:layout_height="47dp"
                            android:inputType="numberDecimal|numberSigned"
                            android:ems="10"
                            android:id="@+id/sqftInputText"
                            android:hint="@string/sqFeet"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                    <EditText
                            android:layout_width="135dp"
                            android:layout_height="47dp"
                            android:inputType="numberDecimal|numberSigned"
                            android:ems="10"
                            android:id="@+id/pingInputText"
                            android:hint="@string/Ping"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView
                            android:text="@string/sqMeter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView9"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                    <TextView
                            android:text="@string/Hectare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView10"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <EditText
                            android:layout_width="135dp"
                            android:layout_height="47dp"
                            android:inputType="numberDecimal|numberSigned"
                            android:ems="10"
                            android:id="@+id/sqMeterInputText"
                            android:hint="@string/sqMeter"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                    />
                    <EditText
                            android:layout_width="135dp"
                            android:layout_height="47dp"
                            android:inputType="numberDecimal|numberSigned"
                            android:ems="10"
                            android:id="@+id/hectareInputText"
                            android:hint="@string/Hectare"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                </TableRow>
                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="@string/MetricAcre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView8"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                    <TextView
                            android:text="@string/Acre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView11"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                    <EditText
                            android:layout_width="135dp"
                            android:layout_height="47dp"
                            android:inputType="numberDecimal|numberSigned"
                            android:ems="10"
                            android:id="@+id/macreInputText"
                            android:hint="@string/MetricAcre"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                    <EditText
                            android:layout_width="135dp"
                            android:layout_height="47dp"
                            android:inputType="numberDecimal|numberSigned"
                            android:ems="10"
                            android:id="@+id/acreInputText"
                            android:hint="@string/Acre"
                            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                            android:onClick="clearAllEditText()"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="4dp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>